# IES-course-soft-dev

./: .gitignore  CMakeLists.txt  CMakePresets.json  Todo.md  env.cmake  main.cpp
bridge/: figure.cpp  figure.h  figureimpl.h
bridge/impls/: figurerasterimpl.cpp  figurerasterimpl.h  figurevectorimpl.cpp  figurevectorimpl.h
bridge/rectangle/: rectangle.cpp  rectangle.h
cars/: car.h  carbuilder.h
cars/carbuilderimpls/: carbuilderkamazimpl.cpp  carbuilderkamazimpl.h
cars/carimpls/: honda.cpp  honda.h  kamaz.cpp  kamaz.h
command/: command.h  helloworldcommand.cpp  helloworldcommand.h  someclass.cpp  someclass.h
device/: basedevice.h  device.cpp  device.h
device/entity/: consts.h  deviceentity.h  deviceentityfactory.h  devicetypes.h
examples/: oopexample.cpp  oopexample.h  smartptrexample.h
factories/: modbuswrapperfactory.cpp  modbuswrapperfactory.h
modbus/: modbus.cpp  tcp_socket.h
modbuswrappers/: connectable.h  modbuswrapper.cpp
modbuswrappers/factories/: modbuswrapperfactoryimpl1.cpp  modbuswrapperfactoryimpl1.h
modbuswrappers/mocks/: modbuswrappermock1.cpp  modbuswrappermock1.h  modbuswrappermockfactory.cpp
modbuswrappers/modbusasyncclientwrapper/: modbusasyncclientwrapper.cpp  modbusasyncclientwrapper.h
modbuswrappers/modbusclientidwrapper/: modbusclientidwrapper.cpp  modbusclientidwrapper.h
modbuswrappers/modbusclientwrapper/: modbusclientdividablewrapper.cpp  modbusclientdividablewrapper.h  modbusclientdividablewrapperfactory.cpp  modbusclientdividablewrapperfactory.h  modbusclientwrapper.cpp  modbusclientwrapper.h  (+5 more)
observers/: button.cpp  button.h  logger.cpp  logger.h  observer.h  testwidget.cpp  testwidget.h
services/: dataprovider.h  dataproviderfactory.h  task.h  test.cpp  test.h  testclass.cpp  testclass.h
src/: foo.h
src/impls/: fooimpl1.cpp  (+1 more)
state/: remote.h  remotestatemachine.cpp  remotestatemachine.h
threadpool/: threadpool.cpp  threadpool.h
widgets/: controller.cpp  controller.h  testwidget.cpp  testwidget.h  testwidget2.cpp  testwidget2.h
(+131 files in other folders)
